[package]
name = "test_coprocessor"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv = { path = "../../", default-features = false }
tipb = { git = "https://github.com/crazycs520/tipb.git",  branch = "hackathon-exe" }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
protobuf = "2"
futures = "0.1"

tikv_util = { path = "../tikv_util" }
test_storage = { path = "../test_storage" }
tidb_query = { path = "../tidb_query" }
